<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="pref_track_distance"
            android:title="@string/pref_track_distance"
            android:summary="@string/pref_track_distance_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:key="pref_high_priority"
            android:title="@string/pref_high_priority"
            android:summary="@string/pref_high_priority_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:key="pref_show_next_hack_time"
            android:title="@string/pref_show_next_hack_time"
            android:summary="@string/pref_show_next_hack_time_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:key="pref_buzz_if_hackable"
            android:title="@string/pref_buzz_if_hackable"
            android:summary="@string/pref_buzz_if_hackable_summary"
            android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="pref_warn_sojourner"
        android:title="@string/pref_warn_sojourner"
        android:summary="@string/pref_warn_sojourner_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="pref_show_hack_helper_window"
        android:title="@string/pref_show_hack_helper_window"
        android:summary="@string/pref_show_hack_helper_window_summary"
        android:defaultValue="false"/>

    <RingtonePreference
        android:showDefault="true"
        android:key="pref_notification_ringtone"
        android:title="@string/pref_notification_ringtone"
        android:summary="@string/pref_notification_ringtone_summary"
        android:ringtoneType="notification">
    </RingtonePreference>

</PreferenceScreen>
