<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_reset_last_hack"
        android:icon="@drawable/ic_reset_last_hack"
        android:title="@string/reset_hack_time_menu"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_hack"
        android:icon="@drawable/ic_action_beenhere"
        android:title="@string/hack"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_love"
        android:title="@string/menu_item_love"
        android:icon="@drawable/ic_action_love"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never">
    </item>
</menu>
