<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:ignore="AppCompatResource">

    <item
        android:id="@+id/menu_hack"
        android:icon="@drawable/ic_action_beenhere"
        app:showAsAction="always|withText"
        android:title="@string/hack"
        >
    </item>

    <item
        android:id="@+id/menu_set_cooldown"
        android:icon="@drawable/ic_menu_cooldown_time"
        app:showAsAction="ifRoom|withText"
        android:title="@string/set_cooldown">
    </item>

    <item
        android:id="@+id/menu_burned"
        android:icon="@drawable/ic_menu_burn"
        app:showAsAction="always|withText"
        android:title="@string/burned">
    </item>

    <item
        android:id="@+id/menu_move"
        android:icon="@drawable/ic_menu_move"
        app:showAsAction="always|withText"
        android:title="@string/move">
    </item>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_content_discard"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete">
    </item>

</menu>